--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,c++,c,python
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,c++,c,python
+# Created by https://www.toptal.com/developers/gitignore/api/c,c++,visualstudiocode,python,windows,linux,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=c,c++,visualstudiocode,python,windows,linux,macos
 
 ### C ###
 # Prerequisites
@@ -293,6 +293,25 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -319,4 +338,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,c++,c,python
+# End of https://www.toptal.com/developers/gitignore/api/c,c++,visualstudiocode,python,windows,linux,macos
